--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/genai": "^1.20.0",
     "express": "^5.1.0",
+    "express-ws": "^5.0.2",
     "mongodb": "^6.20.0"
   }
 }
