--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@google/genai": "^1.20.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-ws": "^5.0.2",
+    "helmet": "^8.1.0",
     "mongodb": "^6.20.0"
   }
 }
